# cookiecutter-python-datascience

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.package_name}}/notebooks/: sample.ipynb
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/: test_sample.py
